--- a/Umbrella/src/main/res/layout/item_forecast_card.xml
+++ b/Umbrella/src/main/res/layout/item_forecast_card.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/content_background"
-    android:layout_margin="@dimen/default_margin"
+    android:layout_marginTop="@dimen/cardGutter"
+    android:layout_marginStart="@dimen/cardGutter"
+    android:layout_marginEnd="@dimen/cardGutter"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -16,14 +18,18 @@
 
         <TextView
             android:id="@+id/tv_name"
+            android:textColor="@color/text_color_primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="@dimen/cardHeader"
             />
 
         <Space
             android:id="@+id/space"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:background="@color/forecast_card_divider"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp" />
 
