--- a/Umbrella/src/main/res/layout/item_forecast_hour.xml
+++ b/Umbrella/src/main/res/layout/item_forecast_hour.xml
@@ -6,7 +6,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_margin="@dimen/hourMargin"
     android:gravity="center"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
