--- a/Umbrella/src/main/res/layout/activity_weather.xml
+++ b/Umbrella/src/main/res/layout/activity_weather.xml
@@ -13,15 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
+        <include
             android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto" />
+            layout="@layout/toolbar"
+            />
+
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
