--- a/Umbrella/src/main/res/layout/activity_setting.xml
+++ b/Umbrella/src/main/res/layout/activity_setting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.foo.umbrella.settings.SettingsActivity">
+    tools:context="com.foo.umbrella.settings.SettingActivity">
 
     <include
         android:id="@+id/toolbar"
