--- a/Umbrella/src/main/res/layout/activity_weather.xml
+++ b/Umbrella/src/main/res/layout/activity_weather.xml
@@ -51,6 +51,7 @@
                 android:text="@{currentVm.description}"
                 android:textColor="@color/content_background"
                 android:textSize="@dimen/textMedium"
+                android:gravity="center_horizontal"
                 app:layout_constraintLeft_toLeftOf="@+id/tv_currentTemperature"
                 app:layout_constraintRight_toRightOf="@+id/tv_currentTemperature"
                 app:layout_constraintTop_toBottomOf="@+id/tv_currentTemperature"
